src/app/templates/schedule/schedule-day-list/schedule-day-list.component.scss
/* Schedule Day List */

.scheduleList {
  padding: 1rem 0;
  border-bottom: 1px solid var(--card-border);
}

.scheduleList_Day {
  display: flex;
  align-items: flex-start;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid var(--card-light-background-hover);
}

.scheduleList_Day:last-child {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

.scheduleList_Day.current h4 {
  color: var(--secondary-color);
}

.scheduleList_Day.current .scheduleListDay__image__container img {
  padding: 2px;
  border: 1px solid var(--secondary-color);
}

.scheduleList_Day.current .scheduleListDay__info__container__meta__time {
  color: var(--secondary-color);
}

.scheduleListDay__image__container {
  margin-right: 1rem;
}

.scheduleListDay__info__container {
  height: auto;
}

.scheduleListDay__info__container__meta {
  margin-bottom: 0.5rem;
}

.scheduleListDay__info__container__meta__time {
  margin-bottom: 0.5rem;
}

.scheduleListDay__info__container__meta__title {
  margin-bottom: 0;
}

.scheduleListDay__info__container__description {
  white-space: pre-wrap;
}

.scheduleListDay__image__container img {
  object-fit: cover;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  padding: 2px;
  border: 1px solid var(--page-background);
}

@media only screen and (min-width: 48rem) {
  .scheduleList_Day {
    margin-bottom: 1.5rem;
    padding-bottom: 1.5rem;
  }

  .scheduleListDay__image__container {
    margin-right: 2rem;
  }

  .scheduleListDay__image__container img {
    width: 60px;
    height: 60px;
  }

  .scheduleListDay__info__container__meta__time {
    margin-bottom: 1rem;
  }
}

@media only screen and (min-width: 64rem) {
  .scheduleList {
    padding: 2rem;
  }

  .scheduleListDay__image__container img {
    width: 70px;
    height: 70px;
  }
}

@media only screen and (min-width: 80rem) {
  .scheduleList_Day {
    margin-bottom: 2rem;
    padding-bottom: 2rem;
  }
}

